Fixed footer moving on smaller screens

--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@ body {
     color: #b0b3b8;
     text-align: center;
     background-color: #1f2021;
+    /* width: 98%; */
 }
 
 #skull1, #skull2 {
@@ -107,8 +108,6 @@ a {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
     min-width: 100vw;
     background-color: #2c333b;
     font-size: 1.2rem;
